public/css/style.css
/* ... */
/* italic face of Century_Gothic */
@font-face {
  font-family: Century_Gothic;
  src: url(../fonts/Century_Gothic_TTF/GOTHICI.TTF);
  font-style: italic;
}
/* bold italic face of Century_Gothic */
@font-face {
  font-family: Century_Gothic;
  src: url(../fonts/Century_Gothic_TTF/GOTHICIB.TTF);
  font-style: italic;
  font-weight: bold;
}
/*------------------------------------------------
| Sticky footer
------------------------------------------------*/
.footer_absolute {
	height: 280px;
	position: absolute; /* relatively to body */
	bottom: 0;
	width: 100%; /* for margin: auto; to work in footer */
}
body {
	padding-bottom: 295px; /* when content > screen */
	height: auto; /* when content > screen */
	min-height: 100%; /* when content < screen */
	position: relative; /* for footer_absolute */
}
/*----------------------------------------------*/
body, html {
	cursor: default;
	font-family: 'Century_Gothic', sans-serif;
}
table {
	margin-bottom: 0;
}
ul {
 	list-style-type: none;
}
li {
	list-style-type: none;
	margin: 0;
}
.width_960 {
	margin-left: auto;
	margin-right: auto;
	width: 960px;
}
a {
	color: black;
}
a:hover {
	color:#008ccb;
}
a:focus {
	outline: none;
}
/**************
*= Header
**************/
header {
	display: inline-block;
	width: inherit;
}
.web_name {
	text-indent: -9999999px;
	display: inline-block;
}
.h1_name {
	margin-top: 14px;
	margin-left: 8px;
	margin-bottom: 40px;
	margin-right: 25px;
	width: 140px;
	float: left; 
}
.header_contscts_div, .header_search {
	float: right;
}
.header_contscts_div {
	margin-right: 10px;
}
.header_discription {
	line-height: 17px;
	margin-top: 15px; 
	font-weight: bold; 
}
.header_callback {
	margin-top: 24px;
	margin-bottom: 0px;
	font-size: 14px;
	color: #6c6c6c;
	line-height: 17px;
	margin-left: 38px;
}
.header_callback_2nd {
	margin-bottom: 0px;
	font-size: 14px;
	color: #6c6c6c;
	line-height: 17px;
	margin-left: 38px;
}
.header_contacts {
	margin-bottom: 0px;
	margin-top: 2px;
	font-size: 25px;
	font-weight: bold;
	color: #008CCB;
	line-height: 35px;
}
.header_contacts_2nd {
	font-size: 25px;
	font-weight: bold;
	color: #008CCB;
	line-height: 25px;
	margin-bottom: 0px;
}
.header_discription {
	font-size: 16px;
	margin-top: 55px;
	display: inline-block;
}
.header_search {
	margin-top: 8px;
	margin-bottom: 0px;
	border: 1px solid rgba(255, 255, 255, 0);
	border-radius: 15px;
	height: 35px;
	outline: none;
	margin-right: -3px; 
}
.code_search {
	float: left;
	margin-top: 9px;
}
.search_field {
	background-image: url(../icons/search_icon.png);
	background-repeat: no-repeat;
	background-position: 6px 2px;
	background-size: 34px;
	width: 220px;
	border-radius: 15px;
	height: 35px;
	padding-left: 35px;
	padding-right: 35px;
	outline: none;
	text-align: center;
	font-family: 'Century Gothic', sans-serif;
	font-size: inherit;
}
.header_search_icon {
	margin-left: -215px;
	height: 30px;
}
/**************
*= navigaion
**************/
nav {
	padding-bottom: 3px;
	font-size: 16px;
	display: inline-block;
}
.mask_nav_item {
	font-weight: bold;
	line-height: 45px;
	text-align: center;
	width: 200px;
	text-decoration: none;
	color: black;
	margin-right: 5px;
	float: left;
	border-radius: 10px 10px 0px 0px;
	overflow: hidden;
}
a.nav_item {
	display: inline-block;
	height: 100%;
	width: 100%;
	background: -webkit-linear-gradient(top, #f7f7f8 0%, #eeeff0 50%, #edeeef 51%, #e9eaea 100%);
	background: -ms-linear-gradient(top, #f7f7f8 0%, #eeeff0 50%, #edeeef 51%, #e9eaea 100%);
	background: -moz-linear-gradient(top, #f7f7f8 0%, #eeeff0 50%, #edeeef 51%, #e9eaea 100%);
	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#f7f7f8', endColorstr='#e9eaea');/*For IE7-8-9*/
}
a.nav_item:focus, a.nav_item:visited{
	text-decoration: none;
}
a.nav_item.selected {
	filter: none;
	background: #008ccb;
	color: white;
}
.mask_nav_item:hover a.nav_item {
	cursor: pointer;
	filter: none;
	border-radius: 10px 10px 0px 0px;
	background: #008ccb;
	color: white;
	text-decoration: none;
}
.navigation_hr {
	color: #008ccb;
	border: 4px solid #008ccb;  
	margin-top: -8px;
	margin-bottom: -8px;
}
/**************
*= main_menu
**************/
.main_menu {
	box-shadow: 0 -10px 15px #959595, 0 5px 20px #959595, -7px 0px 20px #959595;
	padding: 20px 40px;
}
.main_menu_other {
	box-shadow: 0px 0px 10px 5px #c0c0c0;
}
.selected_main_menu {
	color: #008ccb;
}
.category_icon_block {
	color: #5a5a5a;
	text-decoration: none;
	font-weight: bold;
	margin: 0 8px;
	margin-bottom: 10px;
	text-align: center;
	width: 200px;
	display: inline-block;
	font-size: 16px;
	background-image: url(../icons/icon_round_item.png);
	background-repeat: no-repeat;
	background-position: top center;
}
.bar_icon_block {
	background-image: url(../icons/ico_bar_0.png);
}
.neutral_icon_block {
	background-image: url(../icons/ico_neutr_0.png);
}
.inventory_icon_block {
	background-image: url(../icons/ico_kuch_0.png);
}
.wash_icon_block {
	background-image: url(../icons/ico_wash_0.png);
}
.tech_icon_block {
	background-image: url(../icons/ico_tech_0.png);
}
.packing_icon_block {
	background-image: url(../icons/ico_pack_0.png);
}
.bread_icon_block {
	background-image: url(../icons/ico_bread_0.png);
}
.freez_icon_block {
	background-image: url(../icons/ico_frost_0.png);
}
/*icons_backgroung_image_hover*/
.category_icon_block:hover {
	cursor: pointer;
	background-repeat: no-repeat;
	text-decoration: none;
}
.bar_icon_block_hover, .bar_icon_block:hover {
	background-image: url(../icons/ico_bar_1.png);
	color: #008ccb;
}
.neutral_icon_block_hover, .neutral_icon_block:hover {
	background-image: url(../icons/ico_neutr_1.png);
	color: #008ccb;
}
.inventory_icon_block_hover, .inventory_icon_block:hover {
	background-image: url(../icons/ico_kuch_1.png);
	color: #008ccb;
}
.wash_icon_block_hover, .wash_icon_block:hover {
	background-image: url(../icons/ico_wash_1.png);
	color: #008ccb;
}
/* ... */

